# Stardew_Valley_Cocos2d-x4.0

./: CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: refactor_request.md
.github/workflows/: build-check.yml  build.yml  ci.yml  windows-build.yml
Classes/: AppDelegate.cpp  AppDelegate.h  Barn.cpp  Barn.h  Beach.cpp  Beach.h  Cave.cpp  Cave.h  EconomicSystem.cpp  EconomicSystem.h  EnergySystem.cpp  Forest.cpp  Forest.h  InputManager.cpp  InputManager.h  InputTestScene.cpp  InputTestScene.h  Inventory.h  Inventroy.cpp  Myhouse.cpp  Myhouse.h  NpcRelationship.cpp  NpcRelationship.h  Player.cpp  Player.h  SceneInteractionCommand.cpp  SkillTreeUI.h  SkilltreeUI.cpp  Timesystem.cpp  Timesystem.h  Town.cpp  Town.h  UICommand.cpp  farm.cpp  farm.h  intimacyUI.cpp  intimacyUI.h  mini_bag.cpp  mini_bag.h  quitUI.cpp  (+3 more)
Classes/Commands/: GameActionCommand.cpp  GameActionCommand.h  KeyCommand.h  PlayerMovementCommand.cpp  PlayerMovementCommand.h  SceneInteractionCommand.cpp  SceneInteractionCommand.h  UICommand.cpp  UICommand.h
Classes/Core/: AppDelegate.cpp  AppDelegate.h  GameStateObserver.h  InputManager.h
Classes/Entities/: Chicken.h  Cow.h  Crop.cpp  Crop.h  Fish.h  Livestock.h  Marry.cpp  Marry.h  NPC.cpp  NpcRelationship.cpp  NpcRelationship.h  Player.cpp  Player.h  Sheep.h  tree.h
Classes/Factories/: AnimalFactory.cpp  AnimalFactory.h  SceneBoundaryFactory.cpp  SceneBoundaryFactory.h
Classes/Items/: CookingPot.h  Generaltem.cpp  Generaltem.h  ItemFlyweight.cpp  ItemFlyweight.h
Classes/Scenes/: Barn.cpp  Barn.h  Beach.cpp  Beach.h  Cave.cpp  Cave.h  CropSpritePool.cpp  CropSpritePool.h  Forest.cpp  Forest.h  InputTestScene.cpp  Myhouse.cpp  Myhouse.h  Town.cpp  Town.h  farm.cpp  farm.h  supermarket.cpp  supermarket.h
Classes/Systems/: EconomicSystem.cpp  EconomicSystem.h  EnergySystem.cpp  EnergySystem.h  FishingGame.h  GameInteractionFacade.cpp  GameInteractionFacade.h  Inventory.h  Inventroy.cpp  TaskManagement.cpp  TaskManagement.h  Timesystem.cpp  Timesystem.h
Classes/UI/: CreateCharacterUI.cpp  DailyRecordUI.cpp  DailyRecordUI.h  DetailedtaskUI.cpp  DetailedtaskUI.h  GameBeginUI.cpp  InventoryUI.cpp  InventoryUI.h  NPCtalkUI.cpp  NPCtalkUI.h  SkillTreeUI.h  SkilltreeUI.cpp  StoreUI.cpp  StoreUI.h  intimacyUI.cpp  intimacyUI.h  mailBoxUI.cpp  mailBoxUI.h  mini_bag.cpp  mini_bag.h  quitUI.cpp  quitUI.h
proj.win32/: main.cpp
refactor_docs/: template.md
